# agency-voice-interface

./: .gitignore  README.md  personalization.json  pyproject.toml  requirements.txt
.instructions/: commands.md  instructions.md
src/voice_assistant/: config.py  main.py  models.py  websocket_handler.py
src/voice_assistant/agencies/: __init__.py
src/voice_assistant/agencies/ResearchAgency/BrowsingAgent/: BrowsingAgent.py  requirements.txt
src/voice_assistant/agencies/ResearchAgency/BrowsingAgent/tools/: AiderCreateToolPreparation.py  ClickElement.py  ReadURL.py  SolveCaptcha.py  WebPageSummarizer.py
src/voice_assistant/agencies/ResearchAgency/BrowsingAgent/tools/util/: selenium.py
src/voice_assistant/tools/: AiderMoveLeft.py  AiderPrepareToolCreation.py  AiderShutDown.py  AiderSwitchToArchitectMode.py  AiderSwitchToAskMode.py  AiderSwitchToCodeMode.py  CreateFile.py  DraftGmail.py  GetAListOfMyGithubRepositories.py  GetGitRepoName.py  GetGmailSummary.py  GetResponse.py  GetScreenDescription.py  LaunchAider.py  MaximizeAI.py  MaximizeAider.py  OpenBrowser.py  SendMessage.py  SendMessageAsync.py  TellAider.py  __init__.py  registry.py
src/voice_assistant/utils/: aider_utils.py  git_utils.py  llm_utils.py  log_utils.py  project_utils.py  realtime_utils.py  terminal.py  windows.py  windows_utils.py
