[project]
name = "voice-assistant"
version = "0.1.0"
description = "Realtime API Async Python Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agency-swarm>=0.3.1",
    "aiohttp>=3.10.10",
    "google-api-python-client>=2.149.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
    "loguru>=0.7.2",
    "numpy",
    "openai",
    "pillow>=10.4.0",
    "pyaudio",
    "pygame>=2.6.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "selenium-stealth>=1.0.6",
    "selenium>=4.25.0",
    "webdriver-manager>=4.0.2",
    "websockets",
    "beautifulsoup4>=4.9.0",
    "requests>=2.25.0",
    "pywin32; sys_platform == 'win32'",
    "pyobjc-framework-Quartz; sys_platform == 'darwin'",
    "pyscreenshot>=3.1",
    "pyautogui>=0.9.54",
    "pywin32>=308",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
voice-assistant = "voice_assistant.main:main"

[project.optional-dependencies]
dev = [
    "black>=24.1.1",         # Code formatting
    "ruff>=0.2.1",          # Fast Python linter
    "pytest>=8.0.0",        # Testing framework
    "pytest-asyncio>=0.23.5", # Async test support
    "pytest-cov>=4.1.0",    # Test coverage
    "pre-commit>=3.6.0",    # Git hooks
    "mypy>=1.8.0",          # Type checking
    "types-requests",        # Type stubs
    "types-beautifulsoup4"   # Type stubs
]
